--- a/todo/todo.css
+++ b/todo/todo.css
@@ -4,7 +4,7 @@
 body{
     height: 100vh;
     background-image: url(todo.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 h3{
@@ -110,11 +110,11 @@ h3{
         font-size: 5vw;
     }
     .notcompleted  li{
-        font-size: 6vw;
+        font-size: 4vw;
         padding: 3px;
     }
     .completed li{
-        font-size: 6vw;
+        font-size: 4vw;
         padding: 3px;
     }
     .icon{
@@ -122,6 +122,10 @@ h3{
     }
     #dispdatetime{
         display: none;
+    }
+    dl{
+        font-size: 12px;
+        
     }
 }
 @media only screen and (max-width:820px){
@@ -156,4 +160,7 @@ li{
         opacity: 1;
         transform: translateX(0);
     }
+}
+dl{
+    margin: 20px 0 0 20px;  
 }
