--- a/todo/todo.css
+++ b/todo/todo.css
@@ -125,7 +125,6 @@ h3{
     }
     dl{
         font-size: 12px;
-        
     }
 }
 @media only screen and (max-width:820px){
@@ -162,5 +161,5 @@ li{
     }
 }
 dl{
-    margin: 20px 0 0 20px;  
+    margin: 20px 5px 0 20px;  
 }
