--- a/quiz/index.css
+++ b/quiz/index.css
@@ -47,22 +47,27 @@ input[type="text"]:hover{
     border: 3px solid green;  
 }
 .startbtn{
-    margin: 20px;
+    margin: 20px 20px 20px 2px;
+}
+#footer{
+    right: 5px;
+    bottom: 10px;
+    position:absolute;
 }
 @media only screen and (max-width:500px){
     .logo{
-        font-size: 2em;
+        font-size: 3em;
         padding: 20px;
     }
     .heading{
         font-size: medium;
     }
     .instructions{
-        font-size: small;
-        padding: 10px;
+        font-size: 15px;
+        padding: 10px 15px 10px 10px;
     }
     .nametag{
-        font-size: medium;
+        font-size: 15px;
         font-weight: 400;
         padding: auto;
     }
@@ -70,5 +75,8 @@ input[type="text"]:hover{
         font-size: 10px;
         padding: 3px;
         margin: 5px;
+    }
+    #footer{
+        display: none;
     }
 }
